--- a/css/main.css
+++ b/css/main.css
@@ -560,11 +560,15 @@ a {
   font-weight: 500;
 }
 /* =================sports and================ */
+
 /* ==========================footer start=============== */
 .footer {
   width: 100%;
   background-color: #002147;
 }
+
+
+
 .footer_compus {
   max-width: 1248px;
   margin: 0 auto;
@@ -595,4 +599,52 @@ p {
   color: #b9b9ba;
   font-size: 18px;
   font-family: 'Lexend', sans-serif;
+}
+
+/* ===============footer canyon============== */
+
+.footer_school{
+    width: 100%;
+    background-color: #2eca7f;
+}
+.footer_canyon{
+    max-width: 1250px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 60px 0;
+    position: relative;
+}
+.footer_position{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-50%);
+   }
+.footer_schooltext p{
+    font-size: 20px;
+    font-family: 'Lexend', sans-serif;
+    color: #fff;
+}
+
+.footer_link ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    font-size: 16px;
+    font-family: 'Lexend', sans-serif;
+   flex-wrap: wrap;
+}
+
+.icon_link i{
+    padding: 10px 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #002147;
+    background-color: #fff;
+    border-radius: 2px;
 }
